8132010: aarch64: regression test fails compiler/intrinsics/sha/cli/TestUseSHA256IntrinsicsOptionOnSupportedCPU.java

Fix type in SHA flag setting code

Reviewed-by: kvn, goetz, aph, zmajo